--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ canvas#dotCanvas {
     background-color: #1e1e1e;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 550px;
+    width: 90%;
+    max-width: 650px;
     margin: auto;
 }
 
@@ -41,13 +41,13 @@ h1 {
     background: #2c2c2c;
     border: 2px solid #333;
     border-radius: 5px;
-    color: white;
+    color: #888;
     padding: 10px;
     overflow-x: auto;
     white-space: nowrap;
     display: flex;
     align-items: center;
-    min-height: 38px;
+    min-height: 17px;
 }
 
 /* Style for dark-themed scrollbar */
@@ -135,7 +135,6 @@ button:hover {
 }
 
 #outputString, .preview-area {
-    color: white;
     background: #333;
     border-radius: 5px;
     display: flex;
@@ -155,10 +154,9 @@ button:hover {
     display: block;
     padding: 10px;
     background: #2c2c2c;
-    color: white;
     border: 2px solid #333;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 #previewString span {
