--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body, html {
+    height: 100%;
+    width: 100vw;
+    margin: 0;
+    overflow: hidden;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
@@ -22,6 +29,9 @@ canvas#dotCanvas {
 }
 
 .modal {
+    position: relative;
+    max-height: 90vh;
+    overflow-y: auto;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 8px;
@@ -51,33 +61,33 @@ h1 {
 }
 
 /* Style for dark-themed scrollbar */
-.text-field::-webkit-scrollbar {
+html::-webkit-scrollbar {
     height: 10px;
     background: #2c2c2c;
 }
 
-.text-field::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
     background: #444;
     border-radius: 5px;
 }
 
-.text-field::-webkit-scrollbar-thumb:hover {
+html::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
 
 /* For Firefox */
-.text-field {
+html {
     scrollbar-color: #444 #2c2c2c;
     scrollbar-width: thin;
 }
 
 /* Hide scrollbar for IE, Edge, and Firefox */
-.text-field {
+html {
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
 }
 
-.text-field::-webkit-scrollbar {
+html::-webkit-scrollbar {
     display: none;
 }
 
