--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-body, html {
-    height: 100%;
-    width: 100vw;
-    margin: 0;
-    overflow: hidden;
-}
-
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
@@ -29,9 +22,6 @@ canvas#dotCanvas {
 }
 
 .modal {
-    position: relative;
-    max-height: 90vh;
-    overflow-y: auto;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 8px;
@@ -61,33 +51,33 @@ h1 {
 }
 
 /* Style for dark-themed scrollbar */
-html::-webkit-scrollbar {
+.text-field::-webkit-scrollbar {
     height: 10px;
     background: #2c2c2c;
 }
 
-html::-webkit-scrollbar-thumb {
+.text-field::-webkit-scrollbar-thumb {
     background: #444;
     border-radius: 5px;
 }
 
-html::-webkit-scrollbar-thumb:hover {
+.text-field::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
 
 /* For Firefox */
-html {
+.text-field {
     scrollbar-color: #444 #2c2c2c;
     scrollbar-width: thin;
 }
 
 /* Hide scrollbar for IE, Edge, and Firefox */
-html {
+.text-field {
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
 }
 
-html::-webkit-scrollbar {
+.text-field::-webkit-scrollbar {
     display: none;
 }
 
