--- a/customColors.css
+++ b/customColors.css
@@ -51,3 +51,73 @@
     }
 }
 
+/* Option card */
+.options-card {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-100%, -50%);
+    transition: transform 0.5s ease;
+    z-index: 1;
+    width: 300px;
+    
+    padding: 0px 20px 20px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+
+    background-color: rgba(30, 30, 30, 0.5);
+}
+
+.options-card-active {
+    transform: translate(0%, -50%);
+    z-index: 30;
+}
+
+.modal-options-active {
+    transform: translateX(150px);
+}
+
+@media (max-width: 903px) {
+    .options-card {
+        position: fixed;
+        top: auto;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transform: translateY(100%);
+        width: auto;
+        border-radius: 0;
+    }
+
+    .options-card-active {
+        transform: translateY(0);
+    }
+}
+
+.btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.btn-group input[type="radio"] {
+    display: none;
+}
+
+.btn-group label {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #333;
+    color: #ccc;
+    font-size: 0.8em;
+    border: 1px solid #444;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+}
+
+.btn-group input[type="radio"]:checked + label {
+    background-color: #007bff;
+    color: white;
+    border-color: #0056b3;
+}
