--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ canvas#dotCanvas {
 }
 
 .modal {
+    position: absolute;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 8px;
