--- a/customColors.css
+++ b/customColors.css
@@ -121,3 +121,23 @@
     color: white;
     border-color: #0056b3;
 }
+
+
+
+
+
+.presets-panel {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+}
+
+.presets-panel.show {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+}
+
+.preset-btn {
+    transition: opacity 0.5s ease 0.5s;
+}
