--- a/customColors.css
+++ b/customColors.css
@@ -13,7 +13,7 @@
     right: 0;
     transform: translate(100%, -50%);
     z-index: 1;
-    width: 300px;
+    width: 330px;
     
     padding: 0px 20px 20px 20px;
     border-radius: 8px;
@@ -22,7 +22,7 @@
     background-color: rgba(30, 30, 30, 0.5);
 
     max-height: 80%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .color-card-content {
