--- a/customColors.css
+++ b/customColors.css
@@ -68,13 +68,16 @@
     transform: translate(-100%, -50%);
     transition: transform 0.5s ease;
     z-index: 1;
-    width: 300px;
+    width: 330px;
     
     padding: 0px 20px 20px 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 
     background-color: rgba(30, 30, 30, 0.5);
+
+    max-height: 80%;
+    overflow-y: auto;
 }
 
 .options-card-active {
@@ -100,6 +103,10 @@
 
     .options-card-active {
         transform: translateY(0);
+    }
+
+    .modal-options-active {
+        transform: translateY(-50px);
     }
 }
 
